# patchloop

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
autocode/: .env.example  CHANGELOG.md  autocode.py  autocode.sh  config.py  prompts.py
autocode/adapters/: __init__.py  base.py  cli_adapter.py  execution_adapter.py  failover_adapter.py
autocode/agent/: autocode_classifier.py  autocode_state_store.py  backlog_source.py  context_builder.py  execution_controller.py  execution_planner.py  execution_policy.py  github_client.py  github_write_client.py  idle_scanner.py  issue_classifier.py  issue_comment_intent.py  json_utils.py  markdown_plan_source.py  patch_inspector.py  plan_source.py  plan_sync.py  pr_title.py  task_queue.py  task_scheduler.py  validation_runner.py  workspace_manager.py
autocode/scripts/: fix_pr_titles.py
autocode/templates/: TODO.template.md
autocode/tests/: test_autocode_state_store.py  test_backlog_source.py  test_cli_adapter.py  test_config.py  test_context_builder.py  test_execution_controller.py  test_execution_planner.py  test_execution_policy.py  test_github_client.py  test_github_write_client.py  test_idle_scanner.py  test_issue_comment_intent.py  test_json_utils.py  test_main.py  test_markdown_plan_source.py  test_patch_inspector.py  test_plan_sync.py  test_prompts.py  test_scheduler_flow.py  test_state_admin.py  test_task_scheduler.py  test_validation_runner.py  (+1 more)
openreview/: .env.example  CHANGELOG.md  config.py  main.py  prompts.py  review.py  run.sh
(+28 files in other folders)
